third_party/move/move-compiler-v2/tests/more-v1/parser/address_just_too_long.exp

Diagnostics:
error: invalid address
  ┌─ tests/more-v1/parser/address_just_too_long.move:2:9
  │
2 │ address 0x10000000000000000000000000000000000000000000000000000000000000000 {
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid address literal. The numeric value is too large. The maximum size is 32 bytes
