third_party/move/move-compiler-v2/tests/more-v1/parser/address_just_too_long.move
// Addresses are at most 32 bytes long.
address 0x10000000000000000000000000000000000000000000000000000000000000000 {

}
